update for deployment

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,8 @@
   "compilerOptions": {
     "incremental": true,
     "tsBuildInfoFile": "./node_modules/typescript/tsbuildinfo",
-    "noEmit": false,
+    "noEmit": true,
     "outDir":"dist",
-    "rootDir":"server",
     "module": "ESNext",
     "strict": true,
     "lib": ["esnext", "dom", "dom.iterable"],
